--- a/achivers.html
+++ b/achivers.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="top">
-        <img src="./component/tech club logo.jpeg"  width="130px" height="130px"/>        
+        <img src="tech club logo.jpeg"  width="130px" height="130px"/>        
     </div>
     <h1>technical Club Achivers</h1>
     <div class="container">
@@ -25,7 +25,7 @@
                         and make a mark of RCOEM in this field too. 
                 </div>
                 <div class="time">
-                    <img src="./component/random-dice.jpg"  width="180px" height="180px"/> 
+                    <img src="random-dice.jpg"  width="180px" height="180px"/> 
                 </div>
             </div>
             <div class="section">
@@ -38,7 +38,7 @@
                         IoT, Artificial Intelligence
                 </div>
                 <div class="time">
-                    <img src="./component/random-dice.jpg"  width="180px" height="180px"/> 
+                    <img src="random-dice.jpg"  width="180px" height="180px"/> 
                 </div>
             </div>
             <div class="section">
@@ -51,7 +51,7 @@
                     </p>
                 </div>
                 <div class="time">
-                    <img src="./component/random-dice.jpg"  width="180px" height="180px"/> 
+                    <img src="random-dice.jpg"  width="180px" height="180px"/> 
                 </div>
             </div>
             <div class="section">
@@ -63,7 +63,7 @@
                         machines that leave Earth, although they aren't usually referred to as such.
                 </div>
                 <div class="time">
-                    <img src="./component/random-dice.jpg"  width="180px" height="180px"/> 
+                    <img src="random-dice.jpg"  width="180px" height="180px"/> 
                 </div>
             </div>
 
